[project]
name = "generator-py"
version = "0.1.0"
description = "Generate MAVLink binding for Unity Asset"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pymavlink >= 2.4.41"
]

[build-system]
requires = ["uv"]
build-backend = "uv.builders.python"

[tool.uv]
include = ["src"]
exclude = ["tests", "docs"]